// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Occurrences Resolver Correctly Resolves Occurrences Query with empty userAccountID 1`] = `
Object {
  "data": Object {
    "occurrences": Array [
      Object {
        "context": Object {
          "accountId": "id-mycluster-account",
          "region": "location",
          "resourceCrn": null,
          "resourceId": "pluginId",
          "resourceName": "www.myapp.com",
          "resourceType": "worker",
          "serviceCrn": null,
          "serviceName": "application",
        },
        "createTime": "2019-07-10T14:07:46.596357Z",
        "finding": Object {
          "certainty": "HIGH",
          "dataTransferred": null,
          "networkConnection": null,
          "nextSteps": Array [
            Object {
              "title": "title here",
              "url": "Details URL",
            },
          ],
          "severity": "HIGH",
        },
        "longDescription": "ACM Policy that is not compliant",
        "name": "id-mycluster-account/providers/securityAdvisorNewProviderId/occurrences/securityAdvisorOccurrenceId",
        "noteName": "id-mycluster-account/providers/securityAdvisorNewProviderId/notes/securityAdvisorNoteID",
        "providerId": "security-advisor",
        "providerName": "id-mycluster-account/providers/security-advisor",
        "remediation": "NonCompliant; Non-compliant certificatepolicies (expires in less than 50h0m0s) in kube-system[1]: [test-policy-cert, test-policy-cert-secret]",
        "reportedBy": Object {
          "id": "securityAdvisorNewProviderId",
          "title": "Title for Note",
          "url": null,
        },
        "securityClassification": Object {
          "securityCategories": Array [
            "System and communications protections",
          ],
        },
        "shortDescription": "Registered services1",
        "updateTime": "2019-07-10T14:07:46.596382Z",
      },
    ],
  },
}
`;

exports[`Occurrences Resolver Correctly Resolves Occurrences Query with specific userAccountID 1`] = `
Object {
  "data": Object {
    "occurrences": Array [
      Object {
        "context": Object {
          "accountId": "testing-different-id",
          "region": "location",
          "resourceCrn": null,
          "resourceId": "pluginId",
          "resourceName": "www.myapp.com",
          "resourceType": "worker",
          "serviceCrn": null,
          "serviceName": "application",
        },
        "createTime": "2019-07-10T14:07:46.596357Z",
        "finding": Object {
          "certainty": "HIGH",
          "dataTransferred": null,
          "networkConnection": null,
          "nextSteps": Array [
            Object {
              "title": "title here",
              "url": "Details URL",
            },
          ],
          "severity": "HIGH",
        },
        "longDescription": "ACM Policy that is not compliant",
        "name": "testing-different-id/providers/securityAdvisorNewProviderId/occurrences/securityAdvisorOccurrenceId",
        "noteName": "testing-different-id/providers/securityAdvisorNewProviderId/notes/securityAdvisorNoteID",
        "providerId": "security-advisor",
        "providerName": "testing-different-id/providers/security-advisor",
        "remediation": "NonCompliant; Non-compliant certificatepolicies (expires in less than 50h0m0s) in kube-system[1]: [test-policy-cert, test-policy-cert-secret]",
        "reportedBy": Object {
          "id": "securityAdvisorNewProviderId",
          "title": "Title for Note",
          "url": null,
        },
        "securityClassification": Object {
          "securityCategories": Array [
            "System and communications protections",
          ],
        },
        "shortDescription": "Registered services1",
        "updateTime": "2019-07-10T14:07:46.596382Z",
      },
    ],
  },
}
`;

exports[`Occurrences Resolver Correctly Resolves Occurrences Query without userAccountID 1`] = `
Object {
  "data": Object {
    "occurrences": Array [
      Object {
        "context": Object {
          "accountId": "id-mycluster-account",
          "region": "location",
          "resourceCrn": null,
          "resourceId": "pluginId",
          "resourceName": "www.myapp.com",
          "resourceType": "worker",
          "serviceCrn": null,
          "serviceName": "application",
        },
        "createTime": "2019-07-10T14:07:46.596357Z",
        "finding": Object {
          "certainty": "HIGH",
          "dataTransferred": null,
          "networkConnection": null,
          "nextSteps": Array [
            Object {
              "title": "title here",
              "url": "Details URL",
            },
          ],
          "severity": "HIGH",
        },
        "longDescription": "ACM Policy that is not compliant",
        "name": "id-mycluster-account/providers/securityAdvisorNewProviderId/occurrences/securityAdvisorOccurrenceId",
        "noteName": "id-mycluster-account/providers/securityAdvisorNewProviderId/notes/securityAdvisorNoteID",
        "providerId": "security-advisor",
        "providerName": "id-mycluster-account/providers/security-advisor",
        "remediation": "NonCompliant; Non-compliant certificatepolicies (expires in less than 50h0m0s) in kube-system[1]: [test-policy-cert, test-policy-cert-secret]",
        "reportedBy": Object {
          "id": "securityAdvisorNewProviderId",
          "title": "Title for Note",
          "url": null,
        },
        "securityClassification": Object {
          "securityCategories": Array [
            "System and communications protections",
          ],
        },
        "shortDescription": "Registered services1",
        "updateTime": "2019-07-10T14:07:46.596382Z",
      },
    ],
  },
}
`;
